--- a/Announcement_Board/accounts/templates/registration/signup.html
+++ b/Announcement_Board/accounts/templates/registration/signup.html
@@ -6,6 +6,7 @@
 </head>
 <body>
 <form method="post">
+    accounts_signup
 {% csrf_token %}
     {{ form.as_p }}
     <input type="submit" value="Sing up">
