added: filters and pages

--- a/Announcement_Board/Announcement/templates/add_response.html
+++ b/Announcement_Board/Announcement/templates/add_response.html
@@ -5,6 +5,7 @@
     <title>Title</title>
 </head>
 <body>
+response.html
 <!-- ограничим возможность отправления нескольких откликов от одного пользователя на одно и тоже объявление-->
 {% if not responses %}
 {{ user }}
