--- a/Announcement_Board/Announcement/templates/edit_announcement.html
+++ b/Announcement_Board/Announcement/templates/edit_announcement.html
@@ -5,6 +5,7 @@
     <title>Title</title>
 </head>
 <body>
+edit_announcement.html
 <form action="" method="post">
     {% csrf_token %}
     {% load static %}
