--- a/Announcement_Board/accounts/templates/registration/login.html
+++ b/Announcement_Board/accounts/templates/registration/login.html
@@ -5,6 +5,7 @@
     <title>Title</title>
 </head>
 <body>
+ACCOUNTS LOGIN.HTML
 <form method="post" action="{% url 'login' %}">
 {% csrf_token %}
     {{ form.as_p }}
