--- a/Announcement_Board/templates/flatpages/default.html
+++ b/Announcement_Board/templates/flatpages/default.html
@@ -1,11 +1,119 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-{% block content %}
-{% endblock content %}
-</body>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
+    <meta name="generator" content="Hugo 0.84.0">
+    <title>Доска объявлений</title>
+    {% load static %}
+
+    <!-- Bootstrap core CSS -->
+    <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
+
+    <style>
+      .bd-placeholder-img {
+        font-size: 1.125rem;
+        text-anchor: middle;
+        -webkit-user-select: none;
+        -moz-user-select: none;
+        user-select: none;
+      }
+
+      @media (min-width: 768px) {
+        .bd-placeholder-img-lg {
+          font-size: 3.5rem;
+        }
+      }
+    </style>
+
+    <!-- Custom styles for this template -->
+    <link href="{% static 'css/blog.css' %}" rel="stylesheet" />
+  </head>
+  <body>
+
+<div class="container">
+  <header class="blog-header py-3">
+    <div class="row flex-nowrap justify-content-between align-items-center">
+      <div class="col-4 pt-1">
+      </div>
+      <div class="col-4 text-center">
+        <a class="blog-header-logo text-dark" href="{% url 'list' %}">MMORPG объявления</a>
+      </div>
+      <div class="col-4 d-flex justify-content-end align-items-center">
+        {% if request.user.is_authenticated %}
+          <a class="btn btn-sm btn-outline-secondary" href="{% url 'profile' pk=request.user.id %}">Профиль</a>
+          <a class="btn btn-sm btn-outline-secondary" href="{% url 'account_logout' %}">Выйти</a>
+        {% else %}
+          <a class="btn btn-sm btn-outline-secondary" href="{% url 'account_signup' %}">Регистрация</a>
+          <a class="btn btn-sm btn-outline-secondary" href="{% url 'account_login' %}">Войти</a>
+        {% endif %}
+
+      </div>
+    </div>
+  </header>
+
+  {% block cat %}
+  <div class="nav-scroller py-1 mb-2">
+    <nav class="nav d-flex justify-content-between">
+      <a class="p-2 link-secondary" href="{% url 'category' category='Tank' %}">Танки</a>
+      <a class="p-2 link-secondary" href="{% url 'category' category='Healer' %}">Хилы</a>
+      <a class="p-2 link-secondary" href="{% url 'category' category='DD' %}">ДД</a>
+      <a class="p-2 link-secondary" href="{% url 'category' category='Vendor' %}">Торговцы</a>
+      <a class="p-2 link-secondary" href="{% url 'category' category='GuildMaster' %}">Гильдмастеры</a>
+      <a class="p-2 link-secondary" href="{% url 'category' category='QuestGiver' %}">Квестгиверы</a>
+      <a class="p-2 link-secondary" href="{% url 'category' category='Smith' %}">Кузнецы</a>
+      <a class="p-2 link-secondary" href="{% url 'category' category='Skinner' %}">Кожевники</a>
+      <a class="p-2 link-secondary" href="{% url 'category' category='Alchemist' %}">Зельевары</a>
+      <a class="p-2 link-secondary" href="{% url 'category' category='SpellMaster' %}">Мастера заклинаний</a>
+    </nav>
+  </div>
+  {% endblock cat %}
+</div>
+
+<main class="container">
+  {% block headnews %}
+
+  <div class="p-4 p-md-5 mb-4 text-white rounded bg-dark">
+    <div class="col-md-6 px-0">
+      <h1 class="display-4 fst-italic">Какая-то интересная новость из мира игры</h1>
+      <p class="lead my-3">Какой-то текст новости</p>
+      <p class="lead mb-0"><a href="#" class="text-white fw-bold">Читать полностью</a></p>
+    </div>
+  </div>
+  {% endblock headnews %}
+
+
+  <div class="row g-5">
+    <div class="col-md-8">
+      {% block content %}
+      {% endblock content %}
+    </div>
+    <div class="col-md-4">
+      <div class="position-sticky" style="top: 2rem;">
+        <div class="p-4">
+          <h4 class="fst-italic">Мы в соц сетях</h4>
+          <ol class="list-unstyled">
+            <li><a href="#">VK</a></li>
+            <li><a href="#">Telegramm</a></li>
+            <li><a href="#">Discord</a></li>
+          </ol>
+        </div>
+      </div>
+    </div>
+  </div>
+
+</main>
+
+<footer class="blog-footer">
+  <p>Blog template built for <a href="https://getbootstrap.com/">Bootstrap</a> by <a href="https://twitter.com/mdo">@mdo</a>.</p>
+  <p>
+    <a href="#">Back to top</a>
+  </p>
+</footer>
+
+
+
+  </body>
 </html>
