added: display of the number of responses to the announcement

--- a/Announcement_Board/Announcement/templates/announce.html
+++ b/Announcement_Board/Announcement/templates/announce.html
@@ -1,4 +1,5 @@
 {% extends 'flatpages/default.html' %}
+{% load custom_filters %}
 
 {% block cat %}
 {% endblock cat %}
@@ -11,14 +12,14 @@
 announce.html
 {% autoescape off %}
 Автор: {{ announce.author.username }}
-Category: {{ announce.category|safe }}
+Category: {{ announce.get_category_display }}
 <p>Announce: {{ announce.text }}
 <hr>
-
+Уже откликнулось: {{ all_responses|slice_qs:announce|length }}
 
 <!--TODO сделать кнопку доступной только пользователю и только если он не откликнулся-->
 {% if request.user.is_authenticated %}
-    {% if not responses %}
+    {% if not sent_response %}
     <p class="test-center" ><a href="{% url 'add_response' announce.id %}" class="btn btn-primary btn-lg">Откликнуться</a></p>
     {% else %}
     Вы откликнулись на объявление
