fixed: displaying responses only to the author's announcements

--- a/Announcement_Board/Announcement/templates/send_mail_response.html
+++ b/Announcement_Board/Announcement/templates/send_mail_response.html
@@ -5,6 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-Здравсвтуй! {{ text }}
+<h2>Здравствуй, {{ author }}! На Ваше объявление {{ announce }} был оставлен отклик. Ознакомиться с откликами можно по ссылке {{ link }}.</h2>
+<p>{{ text }}</p>
 </body>
 </html>
