--- a/Announcement_Board/Announcement/templates/announce.html
+++ b/Announcement_Board/Announcement/templates/announce.html
@@ -6,10 +6,10 @@
 
 {% block headnews %}
 {% endblock headnews %}
-<!-- Отключение экранирования, чтобы не выводились html теги вместо видео -->
 
 {% block content %}
 announce.html
+<!-- Отключение экранирования, чтобы не выводились html теги вместо видео -->
 {% autoescape off %}
 Автор: {{ announce.author.username }}
 Category: {{ announce.get_category_display }}
@@ -17,12 +17,13 @@ Category: {{ announce.get_category_display }}
 <hr>
 Уже откликнулось: {{ all_responses|slice_qs:announce|length }}
 
-<!--TODO сделать кнопку недоступной автору-->
-{% if request.user.is_authenticated %}
+<!--отклик доступен только зарегистрированному пользователю и недоступен самому автору объявления -->
+{% if request.user.is_authenticated and announce.author != request.user %}
     {% if not sent_response %}
     <p class="test-center" ><a href="{% url 'add_response' announce.id %}" class="btn btn-primary btn-lg">Откликнуться</a></p>
     {% else %}
     Вы откликнулись на объявление
+<!--TODO удаление отклика на время тестов, по завершении убрать-->
     <p class="test-center" ><a href="{% url 'remove_response' announce.id %}" class="btn btn-primary btn-lg">Убрать отклик</a></p>
     {% endif %}
 {% endif %}
