--- a/Announcement_Board/Announcement/templates/edit_announcement.html
+++ b/Announcement_Board/Announcement/templates/edit_announcement.html
@@ -1,10 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends 'flatpages/default.html' %}
+
+{% block cat %}
+{% endblock cat %}
+
+{% block headnews %}
+{% endblock headnews %}
+
+{% block content %}
 edit_announcement.html
 <form action="" method="post">
     {% csrf_token %}
@@ -15,5 +17,4 @@ edit_announcement.html
     {{ form.as_p }}
     <input type="submit" value="Save" />
 </form>
-</body>
-</html>
+{% endblock content %}
