--- a/Announcement_Board/Announcement/templates/announce.html
+++ b/Announcement_Board/Announcement/templates/announce.html
@@ -15,20 +15,21 @@ announce.html
 Category: {{ announce.get_category_display }}
 <p>Announce: {{ announce.text }}
 <hr>
-Уже откликнулось: {{ all_responses|slice_qs:announce|length }}
-
-<!--отклик доступен только зарегистрированному пользователю и недоступен самому автору объявления -->
-{#
-{% if request.user.is_authenticated and announce.author != request.user %}
-    {% if not sent_response %}
-    <p class="test-center" ><a href="{% url 'add_response' announce.id %}" class="btn btn-primary btn-lg">Откликнуться</a></p>
-    {% else %}
-    Вы откликнулись на объявление
-<!--TODO удаление отклика на время тестов, по завершении убрать-->
-    <p class="test-center" ><a href="{% url 'remove_response' announce.id %}" class="btn btn-primary btn-lg">Убрать отклик</a></p>
+<!--проверяем, что на объявление можно отправлять отклик-->
+{% if not announce.opportunity_to_response %}
+    Уже откликнулось: {{ all_responses|slice_qs:announce|length }}
+    <!--отклик доступен только зарегистрированному пользователю и недоступен самому автору объявления -->
+    {% if request.user.is_authenticated and announce.author != request.user %}
+        {% if not sent_response %}
+        <p class="test-center" ><a href="{% url 'add_response' announce.id %}" class="btn btn-primary btn-lg">Откликнуться</a></p>
+        {% else %}
+        Вы откликнулись на объявление
+    <!--TODO удаление отклика на время тестов, по завершении убрать-->
+        <p class="test-center" ><a href="{% url 'remove_response' announce.id %}" class="btn btn-primary btn-lg">Убрать отклик</a></p>
+        {% endif %}
     {% endif %}
 {% endif %}
-#}
+
 {% endautoescape %}
 {% endblock content %}
 
