added: some views are available only to authorized users

--- a/Announcement_Board/Announcement/templates/announcement_list.html
+++ b/Announcement_Board/Announcement/templates/announcement_list.html
@@ -14,6 +14,9 @@
 
 {% block content %}
 announcement_list.html
+{% if request.user.is_authenticated %}
+<a href="{% url 'create' %}" class="btn btn-primary btn-lg">Создать объявление</a>
+{% endif %}
 {% autoescape off %}
 <h3 class="pb-4 mb-4 fst-italic border-bottom">Последние объявления</h3>
 <article class="blog-post">
