added: my_responses template

--- a/Announcement_Board/Announcement/templates/resp_to_my_announce.html
+++ b/Announcement_Board/Announcement/templates/resp_to_my_announce.html
@@ -26,7 +26,7 @@ resp_to_my_announce.html
             <th>Объявление</th>
             <th>Принять/Удалить</th>
         </tr>
-    {% for response in my_responses %}
+    {% for response in responses %}
         <tr>
             <th>{{ response }} </th>
             <th>{{ response.response_announcement }}</th>
