--- a/Announcement_Board/accounts/templates/lk.html
+++ b/Announcement_Board/accounts/templates/lk.html
@@ -15,5 +15,5 @@ lk.html
 <p><a href="#">Редактировать профиль</a></p>
 
 <p><a href="{% url 'my_announce' %}">Мои объявления</a></p>
-<p><a href="#">Мои отклики</a></p>
+<p><a href="{% url 'my_responses' %}">Мои отклики</a></p>
 {% endblock content %}
