--- a/Announcement_Board/Announcement/templates/resp_to_my_announce.html
+++ b/Announcement_Board/Announcement/templates/resp_to_my_announce.html
@@ -29,16 +29,18 @@ resp_to_my_announce.html
     {% for response in responses %}
         <tr>
             <th>{{ response }} </th>
-            <th>{{ response.response_announcement }}</th>
             <th>
-                {% if response.accepted == True %}
+                <a href ="{% url 'announce' pk=response.response_announcement.id %}">{{ response.response_announcement }}</a>
+            </th>
+            <th>
+                {% if response.accepted == 1 %}
                     <div class="btn-success">Принято</div>
                 {% else %}
-                <form action="{% url 'my_responses' %}" method="GET">
+                <form action="{% url 'responses' %}" method="GET">
                     <input class="btn-primary" type="submit" name="button" value="Принять">
                     <input type="hidden" name="resp_id" value="{{ response.id }}">
                 </form>
-                <form action="{% url 'my_responses' %}" method="GET">
+                <form action="{% url 'responses' %}" method="GET">
                     <input class="btn-secondary" type="submit" name="button" value="Отклонить">
                     <input type="hidden" name="resp_id" value="{{ response.id }}">
                 </form>
