added: raise 404 if response cannot be sent

--- a/Announcement_Board/Announcement/templates/add_response.html
+++ b/Announcement_Board/Announcement/templates/add_response.html
@@ -8,7 +8,7 @@
 <!-- Отключение экранирования, чтобы не выводились html теги вместо видео -->
 
 {% block content %}
-response.html
+add_response.html
 <!-- если отклика нет, пользователю доступна форма для его отправки-->
 {% if not responses %}
 {{ user }}
