--- a/Announcement_Board/Announcement/templates/resp_to_my_announce.html
+++ b/Announcement_Board/Announcement/templates/resp_to_my_announce.html
@@ -1,5 +1,7 @@
 {% extends 'flatpages/default.html' %}
 
+{% load custom_tags %}
+
 {% block cat %}
 {% endblock cat %}
 
@@ -14,40 +16,43 @@ resp_to_my_announce.html
     {{ filterset.form.as_p }}
     <input type="submit" value="Найти" />
 </form>
+<a href="{% url 'responses' %}">Посмотреть все</a>
 
-{% if new_response|length == 0 %}
-    <h2>Нет новых откликов!</h2>
 Длина: {{ new_response|length }}
-{% else %}
-Длина: {{ new_response|length }}
-    <table>
-        <tr>
-            <th>Отклик</th>
-            <th>Объявление</th>
-            <th>Принять/Удалить</th>
-        </tr>
-    {% for response in responses %}
-        <tr>
-            <th>{{ response }} </th>
-            <th>
-                <a href ="{% url 'announce' pk=response.response_announcement.id %}">{{ response.response_announcement }}</a>
-            </th>
-            <th>
-                {% if response.accepted == 1 %}
-                    <div class="btn-success">Принято</div>
-                {% else %}
+<table>
+    <tr>
+        <th>Отклик</th>
+        <th>Объявление</th>
+        <th>Принять/Удалить</th>
+    </tr>
+{% for response in responses %}
+    <tr>
+        <th>{{ response }} </th>
+        <th>
+            <a href ="{% url 'announce' pk=response.response_announcement.id %}">{{ response.response_announcement }}</a>
+        </th>
+        <th>
+            {% if response.accepted == 1 %}
+                <div class="btn-success">Принято</div>
+            {% elif  response.accepted == 2%}
+                <div class="btn-dark">Отклонено</div>
+<!--                TODO сделать сохранение фильта после нажатия кнопки-->
                 <form action="{% url 'responses' %}" method="GET">
                     <input class="btn-primary" type="submit" name="button" value="Принять">
                     <input type="hidden" name="resp_id" value="{{ response.id }}">
                 </form>
-                <form action="{% url 'responses' %}" method="GET">
-                    <input class="btn-secondary" type="submit" name="button" value="Отклонить">
-                    <input type="hidden" name="resp_id" value="{{ response.id }}">
-                </form>
-                {% endif %}
-            </th>
-        </tr>
-    {% endfor %}
-{% endif %}
+            {% else %}
+            <form action="{% url 'responses' %}" method="GET">
+                <input class="btn-primary" type="submit" name="button" value="Принять">
+                <input type="hidden" name="resp_id" value="{{ response.id }}">
+            </form>
+            <form action="{% url 'responses' %}" method="GET">
+                <input class="btn-secondary" type="submit" name="button" value="Отклонить">
+                <input type="hidden" name="resp_id" value="{{ response.id }}">
+            </form>
+            {% endif %}
+        </th>
+    </tr>
+{% endfor %}
 </table>
 {% endblock content %}
