--- a/Announcement_Board/Announcement/templates/detail_announce.html
+++ b/Announcement_Board/Announcement/templates/detail_announce.html
@@ -17,17 +17,21 @@ Category: {{ announce.get_category_display }}
 <hr>
 <!--проверяем, что на объявление можно отправлять отклик-->
 {% if announce.opportunity_to_response %}
-    Уже откликнулось: {{ all_responses|slice_qs:announce|length }}
+    Уже откликнулось: {{ all_responses|slice_qs:announce }}<br>
     <!--отклик доступен только зарегистрированному пользователю и недоступен самому автору объявления -->
     {% if request.user.is_authenticated and announce.author != request.user %}
         {% if not sent_response %}
         <p class="test-center" ><a href="{% url 'add_response' announce.id %}" class="btn btn-primary btn-lg">Откликнуться</a></p>
         {% else %}
         Вы откликнулись на объявление
-    <!--TODO удаление отклика на время тестов, по завершении убрать-->
-        <p class="test-center" ><a href="{% url 'remove_response' announce.id %}" class="btn btn-primary btn-lg">Убрать отклик</a></p>
         {% endif %}
     {% endif %}
+{% endif %}
+{% if announce.author == request.user %}
+    <p class="test-center" ><a href="{% url 'edit' announce.id %}" class="btn btn-primary btn-lg">Редактировать</a></p>
+{% endif %}
+{% if perms.Announcement.delete_announcement %}
+    <p class="test-center" ><a href="{% url 'delete' announce.id %}" class="btn btn-primary btn-lg">Удалить</a></p>
 {% endif %}
 
 {% endautoescape %}
