--- a/Announcement_Board/Announcement/templates/resp_to_my_announce.html
+++ b/Announcement_Board/Announcement/templates/resp_to_my_announce.html
@@ -17,8 +17,6 @@ resp_to_my_announce.html
     <input type="submit" value="Найти" />
 </form>
 <a href="{% url 'responses' %}">Посмотреть все</a>
-
-Длина: {{ new_response|length }}
 <table>
     <tr>
         <th>Отклик</th>
@@ -36,7 +34,6 @@ resp_to_my_announce.html
                 <div class="btn-success">Принято</div>
             {% elif  response.accepted == 2%}
                 <div class="btn-dark">Отклонено</div>
-<!--                TODO сделать сохранение фильта после нажатия кнопки-->
                 <form action="{% url 'responses' %}" method="GET">
                     <input class="btn-primary" type="submit" name="button" value="Принять">
                     <input type="hidden" name="resp_id" value="{{ response.id }}">
@@ -55,4 +52,24 @@ resp_to_my_announce.html
     </tr>
 {% endfor %}
 </table>
+Страницы:
+{% if page_obj.has_previous %}
+    <a href="?{% url_replace page=1 %}">1</a>
+        {% if page_obj.previous_page_number != 1 %}
+            ...
+            <a href="?{% url_replace page=page_obj.previous_page_number %}">{{ page_obj.previous_page_number }}</a>
+        {% endif %}
+{% endif %}
+
+{# Информация о текущей странице #}
+{{ page_obj.number }}
+
+{# Информация о следующих страницах #}
+{% if page_obj.has_next %}
+    <a href="?{% url_replace page=page_obj.next_page_number %}">{{ page_obj.next_page_number }}</a>
+    {% if paginator.num_pages != page_obj.next_page_number %}
+        ...
+        <a href="?{% url_replace page=page_obj.paginator.num_pages %}">{{ page_obj.paginator.num_pages }}</a>
+    {% endif %}
+{% endif %}
 {% endblock content %}
