--- a/Announcement_Board/Announcement/templates/resp_to_my_announce.html
+++ b/Announcement_Board/Announcement/templates/resp_to_my_announce.html
@@ -34,16 +34,16 @@ resp_to_my_announce.html
                 <div class="btn-success">Принято</div>
             {% elif  response.accepted == 2%}
                 <div class="btn-dark">Отклонено</div>
-                <form action="{% url 'responses' %}" method="GET">
+                <form action="" method="GET">
                     <input class="btn-primary" type="submit" name="button" value="Принять">
                     <input type="hidden" name="resp_id" value="{{ response.id }}">
                 </form>
             {% else %}
-            <form action="{% url 'responses' %}" method="GET">
+            <form action="" method="GET">
                 <input class="btn-primary" type="submit" name="button" value="Принять">
                 <input type="hidden" name="resp_id" value="{{ response.id }}">
             </form>
-            <form action="{% url 'responses' %}" method="GET">
+            <form action="" method="GET">
                 <input class="btn-secondary" type="submit" name="button" value="Отклонить">
                 <input type="hidden" name="resp_id" value="{{ response.id }}">
             </form>
